# Nexus-Discord-Tool

./: .gitignore  Build and Release  Nexus Discord Tool.txt  README.md  package-lock.json  package.json
.github/workflows/: release.yml
bot/: .env.example  bot-data.json  bot.js  config.example.json  index.js  package-lock.json  package.json  tickets.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
