[package]
name = "nexus-discord-tool"
version = "1.0.0"
description = "Desktop application for configuring, managing and hosting Discord bots"
authors = ["Max"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"], default-features = false, features = ["rustls-tls", "json"] }
discord-rich-presence = "0.2"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Faster debug builds
[profile.dev]
opt-level = 0
debug = false
incremental = true

[profile.dev.package."*"]
opt-level = 2
